<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    <variable
        name="data"
        type="com.salah.amadeus.data.local.entity.DataEntity" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:elevation="2dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">
            <TextView
                android:id="@+id/city_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/name"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/city_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="?android:attr/colorPrimary"
                android:text="@{data.city.name}"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/city_name_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/country_name_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:text="@string/iso_code"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/startVertical"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/country_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{data.city.country}"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/country_name_text"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/lat_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/latitude"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city_name_text" />

            <TextView
                android:id="@+id/latitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{Double.toString(data.city.coord.lat)}"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/lat_text"
                app:layout_constraintTop_toBottomOf="@+id/city_name" />

            <TextView
                android:id="@+id/lon_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ellipsize="end"
                android:text="@string/longitude"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/startVertical"
                app:layout_constraintTop_toBottomOf="@+id/country_name" />

            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ellipsize="end"
                android:text="@{Double.toString(data.city.coord.lon)}"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/lon_text"
                app:layout_constraintTop_toBottomOf="@+id/country_name" />
            <TextView
                android:id="@+id/weather_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:text="@string/weather"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/longitude" />
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/weather_chip_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/weather_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/longitude">
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="rain"></com.google.android.material.chip.Chip>
            </com.google.android.material.chip.ChipGroup>

            <Button
                android:id="@+id/map_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAllCaps="false"
                android:text="@string/locate_in_map"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_chip_group">
            </Button>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startVertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="210dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>